[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonl-stats"
version = "0.1.0"
description = "A CLI that reports stats over a JSONL file: record count, key frequency, and per-key type histograms"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Amarel Taylor Scott" }]
keywords = ["llm", "agents", "ai", "cli"]
dependencies = []

[tool.setuptools]
py-modules = ["jsonl_stats"]
